// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's page destination action: all fields 1`] = `
Object {
  "anonymousId": "Gm^2vj@raF9m",
  "context": Object {
    "groupId": "Gm^2vj@raF9m",
    "page": Object {
      "path": "Gm^2vj@raF9m",
      "referrer": "Gm^2vj@raF9m",
      "search": "Gm^2vj@raF9m",
      "title": "Gm^2vj@raF9m",
      "url": "http://fujav.cx/ef",
    },
  },
  "messageId": "961fed34-4795-4432-b622-84abc47362b4",
  "name": "Gm^2vj@raF9m",
  "properties": Object {
    "testType": "Gm^2vj@raF9m",
  },
  "timestamp": "2023-01-03T13:36:02.932Z",
  "userId": "Gm^2vj@raF9m",
}
`;

exports[`Testing snapshot for Ripe's page destination action: required fields 1`] = `
Object {
  "anonymousId": "Gm^2vj@raF9m",
  "context": Object {
    "page": Object {},
  },
  "messageId": "93a807f9-05e0-4ff4-82f7-763a7c22c279",
  "name": "Gm^2vj@raF9m",
  "properties": Object {
    "testType": "Gm^2vj@raF9m",
  },
  "timestamp": "2023-01-03T13:36:02.919Z",
}
`;
